--- a/pom.xml
+++ b/pom.xml
@@ -94,9 +94,9 @@
                     </execution>
                     <execution>
                         <id>copy-executable01</id>
-                        <phase>package</phase>
+                        <phase>install</phase>
                         <goals>
-                            <goal>copy-resources</goal>
+                            <goal>testResources</goal>
                         </goals>
                         <configuration>
                             <outputDirectory>${basedir}/exec</outputDirectory>
