--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,16 @@
     <version>0.0.4</version>
     <name>snake</name>
     <description>Spring and swing</description>
+    <packaging>jar</packaging>
     <properties>
         <java.version>17</java.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>pl.cbr</groupId>
+            <artifactId>retromath</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
